Fix CBArrayEditor UI bug
- Fix items with long descriptions pushing the UI out of view.

--- a/javascript/CBArrayEditor.css
+++ b/javascript/CBArrayEditor.css
@@ -4,6 +4,7 @@
 
 .CBArrayEditor .CBUISectionItem .content {
     flex: 1 1 auto;
+    min-width: 0;
     padding: 5px 10px;
 }
 
